Attempt to fix widget sizing on mobile

--- a/f1-next-schedule/style.css
+++ b/f1-next-schedule/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 table {
-  width: 100vw;
+  width: 100%;
   table-layout: fixed;
   white-space: nowrap;
 }
